--- a/src/android/my.gradle
+++ b/src/android/my.gradle
@@ -1,15 +1,16 @@
 repositories{    
   jcenter()
+  mavenLocal() 
+  maven { url "https://maven.google.com" } 
   flatDir {
       dirs 'libs'
    }
 }
 
 dependencies {
-
-    compile(name:'play-services-12.0.1',              ext:'aar')
+//    compile(name:'play-services-12.0.1',              ext:'aar')
     compile(name:'recyclerview-v7-26.1.0',            ext:'aar')
-    compile(name:'multidex-1.0.3',                    ext:'aar')
+//    compile(name:'multidex-1.0.3',                    ext:'aar')
     compile(name:'appcompat-v7-26.1.0',               ext:'aar')
 	compile(name:'adcolony-3.3.3',                    ext:'aar')
 	compile(name:'am-android-sdk-1.11.4',             ext:'aar')
