--- a/src/android/my.gradle
+++ b/src/android/my.gradle
@@ -42,5 +42,8 @@ android {
 		targetSdkVersion 26
         multiDexEnabled  true
     }
-	
+	dexOptions {
+        incremental true
+        javaMaxHeapSize "4g"
+    }
 }
